content/_generated-doc/3.15/config/quarkus-tls-registry.adoc
:summaryTableId: quarkus-tls-registry_quarkus-tls
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-tls-registry_quarkus-tls-lets-encrypt-enabled]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-lets-encrypt-enabled[`quarkus.tls.lets-encrypt.enabled`]##

[.description]
--
Set to `true` to enable let's encrypt support.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_LETS_ENCRYPT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_LETS_ENCRYPT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-tls-registry_quarkus-tls-key-store-pem-order]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-pem-order[`quarkus.tls.key-store.pem.order`]##

[.description]
--
The order of the key/cert files, based on the names in the `keyCerts` map.

By default, Quarkus sorts the key using a lexicographical order. This property allows you to specify the order of the key/cert files.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_PEM_ORDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_PEM_ORDER+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-p12-path]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-p12-path[`quarkus.tls.key-store.p12.path`]##

[.description]
--
Path to the key store file (P12 / PFX format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_P12_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_P12_PATH+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-key-store-p12-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-p12-password[`quarkus.tls.key-store.p12.password`]##

[.description]
--
Password of the key store. When not set, the password must be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_P12_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_P12_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-p12-alias]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-p12-alias[`quarkus.tls.key-store.p12.alias`]##

[.description]
--
Alias of the private key and certificate in the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_P12_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_P12_ALIAS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-p12-alias-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-p12-alias-password[`quarkus.tls.key-store.p12.alias-password`]##

[.description]
--
Password of the alias in the key store. If not set, the password will be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_P12_ALIAS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_P12_ALIAS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-p12-provider]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-p12-provider[`quarkus.tls.key-store.p12.provider`]##

[.description]
--
Provider of the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_P12_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_P12_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-jks-path]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-jks-path[`quarkus.tls.key-store.jks.path`]##

[.description]
--
Path to the keystore file (JKS format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-key-store-jks-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-jks-password[`quarkus.tls.key-store.jks.password`]##

[.description]
--
Password of the key store. When not set, the password must be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-jks-alias]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-jks-alias[`quarkus.tls.key-store.jks.alias`]##

[.description]
--
Alias of the private key and certificate in the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_JKS_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_JKS_ALIAS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-jks-alias-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-jks-alias-password[`quarkus.tls.key-store.jks.alias-password`]##

[.description]
--
Password of the alias in the key store. When not set, the password may be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_JKS_ALIAS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_JKS_ALIAS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-jks-provider]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-jks-provider[`quarkus.tls.key-store.jks.provider`]##

[.description]
--
Provider of the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_JKS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_JKS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-sni]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-sni[`quarkus.tls.key-store.sni`]##

[.description]
--
Enables Server Name Indication (SNI).

Server Name Indication (SNI) is a TLS extension that allows a client to specify the hostname it is attempting to connect to during the TLS handshake. This enables a server to present different SSL certificates for multiple domains on a single IP address, facilitating secure communication for virtual hosting scenarios.

With this setting enabled, the client indicate the server name during the TLS handshake, allowing the server to select the right certificate.

When configuring the keystore with PEM files, multiple CRT/Key must be given. When configuring the keystore with a JKS or a P12 file, it selects one alias based on the SNI hostname. In this case, all the keystore password and alias password must be the same (configured with the `password` and `alias-password` properties. Do not set the `alias` property.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_SNI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_SNI+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-tls-registry_quarkus-tls-key-store-credentials-provider-name]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-credentials-provider-name[`quarkus.tls.key-store.credentials-provider.name`]##

[.description]
--
The name of the "credential" bucket (map key -> passwords) to retrieve from the `io.quarkus.credentials.CredentialsProvider`. If not set, the credential provider will not be used.

A credential provider offers a way to retrieve the key store password as well as alias password. Note that the credential provider is only used if the passwords are not set in the configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-credentials-provider-bean-name]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-credentials-provider-bean-name[`quarkus.tls.key-store.credentials-provider.bean-name`]##

[.description]
--
The name of the bean providing the credential provider.

The name is used to select the credential provider to use. The credential provider must be exposed as a CDI bean and with the `@Named` annotation set to the configured name to be selected.

If not set, the default credential provider is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_CREDENTIALS_PROVIDER_BEAN_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_CREDENTIALS_PROVIDER_BEAN_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-credentials-provider-password-key]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-credentials-provider-password-key[`quarkus.tls.key-store.credentials-provider.password-key`]##

[.description]
--
The key used to retrieve the key store password.

If the selected credential provider does not support the key, the password is not retrieved. Otherwise, the retrieved value is used to open the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_CREDENTIALS_PROVIDER_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_CREDENTIALS_PROVIDER_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`password`

a| [[quarkus-tls-registry_quarkus-tls-key-store-credentials-provider-alias-password-key]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-credentials-provider-alias-password-key[`quarkus.tls.key-store.credentials-provider.alias-password-key`]##

[.description]
--
The key used to retrieve the key store alias password.

If the selected credential provider does not contain the key, the alias password is not retrieved. Otherwise, the retrieved value is used to access the alias `private key` from the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_CREDENTIALS_PROVIDER_ALIAS_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_CREDENTIALS_PROVIDER_ALIAS_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`alias-password`

a| [[quarkus-tls-registry_quarkus-tls-trust-store-pem-certs]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-pem-certs[`quarkus.tls.trust-store.pem.certs`]##

[.description]
--
List of the trusted cert paths (Pem format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--
|list of path
|

a| [[quarkus-tls-registry_quarkus-tls-trust-store-p12-path]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-p12-path[`quarkus.tls.trust-store.p12.path`]##

[.description]
--
Path to the trust store file (P12 / PFX format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_P12_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_P12_PATH+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-trust-store-p12-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-p12-password[`quarkus.tls.trust-store.p12.password`]##

[.description]
--
Password of the trust store. If not set, the password must be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_P12_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_P12_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-trust-store-p12-alias]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-p12-alias[`quarkus.tls.trust-store.p12.alias`]##

[.description]
--
Alias of the trust store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_P12_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_P12_ALIAS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-trust-store-p12-provider]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-p12-provider[`quarkus.tls.trust-store.p12.provider`]##

[.description]
--
Provider of the trust store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_P12_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_P12_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-trust-store-jks-path]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-jks-path[`quarkus.tls.trust-store.jks.path`]##

[.description]
--
Path to the trust store file (JKS format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-trust-store-jks-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-jks-password[`quarkus.tls.trust-store.jks.password`]##

[.description]
--
Password of the trust store. If not set, the password must be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-trust-store-jks-alias]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-jks-alias[`quarkus.tls.trust-store.jks.alias`]##

[.description]
--
Alias of the key in the trust store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_JKS_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_JKS_ALIAS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-trust-store-jks-provider]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-jks-provider[`quarkus.tls.trust-store.jks.provider`]##

[.description]
--
Provider of the trust store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_JKS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_JKS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-trust-store-credentials-provider-name]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-credentials-provider-name[`quarkus.tls.trust-store.credentials-provider.name`]##

[.description]
--
The name of the "credential" bucket (map key -> passwords) to retrieve from the `io.quarkus.credentials.CredentialsProvider`. If not set, the credential provider will not be used.

A credential provider offers a way to retrieve the key store password as well as alias password. Note that the credential provider is only used if the passwords are not set in the configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-trust-store-credentials-provider-bean-name]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-credentials-provider-bean-name[`quarkus.tls.trust-store.credentials-provider.bean-name`]##

[.description]
--
The name of the bean providing the credential provider.

The name is used to select the credential provider to use. The credential provider must be exposed as a CDI bean and with the `@Named` annotation set to the configured name to be selected.

If not set, the default credential provider is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_CREDENTIALS_PROVIDER_BEAN_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_CREDENTIALS_PROVIDER_BEAN_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-trust-store-credentials-provider-password-key]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-store-credentials-provider-password-key[`quarkus.tls.trust-store.credentials-provider.password-key`]##

[.description]
--
The key used to retrieve the trust store password.

If the selected credential provider does not contain the configured key, the password is not retrieved. Otherwise, the retrieved value is used to open the trust store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_STORE_CREDENTIALS_PROVIDER_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_STORE_CREDENTIALS_PROVIDER_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`password`

a| [[quarkus-tls-registry_quarkus-tls-cipher-suites]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-cipher-suites[`quarkus.tls.cipher-suites`]##

[.description]
--
Sets the ordered list of enabled cipher suites. If none is given, a reasonable default is selected from the built-in ciphers.

When suites are set, it takes precedence over the default suite defined by the `SSLEngineOptions` in use.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_CIPHER_SUITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_CIPHER_SUITES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-tls-registry_quarkus-tls-protocols]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-protocols[`quarkus.tls.protocols`]##

[.description]
--
Sets the ordered list of enabled TLS protocols.

If not set, it defaults to `"TLSv1.3, TLSv1.2"`. The following list of protocols are supported: `TLSv1, TLSv1.1, TLSv1.2, TLSv1.3`. To only enable `TLSv1.3`, set the value to `to "TLSv1.3"`.

Note that setting an empty list, and enabling TLS is invalid. You must at least have one protocol.

Also, setting this replaces the default list of protocols.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`TLSv1.3,TLSv1.2`

a| [[quarkus-tls-registry_quarkus-tls-handshake-timeout]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-handshake-timeout[`quarkus.tls.handshake-timeout`]##

[.description]
--
The timeout for the TLS handshake phase.

If not set, it defaults to 10 seconds.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_HANDSHAKE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_HANDSHAKE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`10S`

a| [[quarkus-tls-registry_quarkus-tls-alpn]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-alpn[`quarkus.tls.alpn`]##

[.description]
--
Enables the Application-Layer Protocol Negotiation (ALPN).

Application-Layer Protocol Negotiation is a TLS extension that allows the client and server during the TLS handshake to negotiate which protocol they will use for communication. ALPN enables more efficient communication by allowing the client to indicate its preferred application protocol to the server before the TLS connection is established. This helps in scenarios such as HTTP/2 where multiple protocols may be available, allowing for faster protocol selection.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_ALPN+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-tls-registry_quarkus-tls-certificate-revocation-list]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-certificate-revocation-list[`quarkus.tls.certificate-revocation-list`]##

[.description]
--
Sets the list of revoked certificates (paths to files).

A Certificate Revocation List (CRL) is a list of digital certificates that have been revoked by the issuing Certificate Authority (CA) before their scheduled expiration date. When a certificate is compromised, no longer needed, or deemed invalid for any reason, the CA adds it to the CRL to inform relying parties not to trust the certificate anymore.

Two formats are allowed: DER and PKCS++#++7 (also known as P7B). When using the DER format, you must pass DER-encoded CRLs. When using the PKCS++#++7 format, you must pass PKCS++#++7 `SignedData` object, with the only significant field being `crls`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_CERTIFICATE_REVOCATION_LIST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_CERTIFICATE_REVOCATION_LIST+++`
endif::add-copy-button-to-env-var[]
--
|list of path
|

a| [[quarkus-tls-registry_quarkus-tls-trust-all]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-trust-all[`quarkus.tls.trust-all`]##

[.description]
--
If set to `true`, the server trusts all certificates.

This is useful for testing, but should not be used in production.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_TRUST_ALL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_TRUST_ALL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-tls-registry_quarkus-tls-hostname-verification-algorithm]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-hostname-verification-algorithm[`quarkus.tls.hostname-verification-algorithm`]##

[.description]
--
The hostname verification algorithm to use in case the server's identity should be checked. Should be `HTTPS` (default), `LDAPS` or `NONE`.

If set to `NONE`, it does not verify the hostname.

If not set, the configured extension decides the default algorithm to use. For example, for HTTP, it will be "HTTPS". For TCP, it can depend on the protocol. Nevertheless, it is recommended to set it to "HTTPS" or "LDAPS".


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_HOSTNAME_VERIFICATION_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_HOSTNAME_VERIFICATION_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-reload-period]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-reload-period[`quarkus.tls.reload-period`]##

[.description]
--
When configured, the server will reload the certificates (from the file system for example) and fires a `CertificateUpdatedEvent` if the reload is successful

This property configures the period to reload the certificates. IF not set, the certificates won't be reloaded automatically. However, the application can still trigger the reload manually using the `io.quarkus.tls.TlsConfiguration++#++reload()` method, and then fire the `CertificateUpdatedEvent` manually.

The fired event is used to notify the application that the certificates have been updated, and thus proceed with the actual switch of certificates.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_RELOAD_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_RELOAD_PERIOD+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-tls-registry_quarkus-tls-key-store-pem-key-certs-key]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-pem-key-certs-key[`quarkus.tls.key-store.pem."key-certs".key`]##

[.description]
--
The path to the key file (in PEM format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_PEM__KEY_CERTS__KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_PEM__KEY_CERTS__KEY+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-key-store-pem-key-certs-cert]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-key-store-pem-key-certs-cert[`quarkus.tls.key-store.pem."key-certs".cert`]##

[.description]
--
The path to the certificate file (in PEM format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS_KEY_STORE_PEM__KEY_CERTS__CERT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS_KEY_STORE_PEM__KEY_CERTS__CERT+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-pem-key-certs-key]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-pem-key-certs-key[`quarkus.tls."tls-bucket-name".key-store.pem."key-certs".key`]##

[.description]
--
The path to the key file (in PEM format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_PEM__KEY_CERTS__KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_PEM__KEY_CERTS__KEY+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-pem-key-certs-cert]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-pem-key-certs-cert[`quarkus.tls."tls-bucket-name".key-store.pem."key-certs".cert`]##

[.description]
--
The path to the certificate file (in PEM format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_PEM__KEY_CERTS__CERT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_PEM__KEY_CERTS__CERT+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-pem-order]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-pem-order[`quarkus.tls."tls-bucket-name".key-store.pem.order`]##

[.description]
--
The order of the key/cert files, based on the names in the `keyCerts` map.

By default, Quarkus sorts the key using a lexicographical order. This property allows you to specify the order of the key/cert files.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_PEM_ORDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_PEM_ORDER+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-p12-path]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-p12-path[`quarkus.tls."tls-bucket-name".key-store.p12.path`]##

[.description]
--
Path to the key store file (P12 / PFX format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_P12_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_P12_PATH+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-p12-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-p12-password[`quarkus.tls."tls-bucket-name".key-store.p12.password`]##

[.description]
--
Password of the key store. When not set, the password must be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_P12_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_P12_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-p12-alias]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-p12-alias[`quarkus.tls."tls-bucket-name".key-store.p12.alias`]##

[.description]
--
Alias of the private key and certificate in the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_P12_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_P12_ALIAS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-p12-alias-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-p12-alias-password[`quarkus.tls."tls-bucket-name".key-store.p12.alias-password`]##

[.description]
--
Password of the alias in the key store. If not set, the password will be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_P12_ALIAS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_P12_ALIAS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-p12-provider]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-p12-provider[`quarkus.tls."tls-bucket-name".key-store.p12.provider`]##

[.description]
--
Provider of the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_P12_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_P12_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-jks-path]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-jks-path[`quarkus.tls."tls-bucket-name".key-store.jks.path`]##

[.description]
--
Path to the keystore file (JKS format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-jks-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-jks-password[`quarkus.tls."tls-bucket-name".key-store.jks.password`]##

[.description]
--
Password of the key store. When not set, the password must be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-jks-alias]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-jks-alias[`quarkus.tls."tls-bucket-name".key-store.jks.alias`]##

[.description]
--
Alias of the private key and certificate in the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_JKS_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_JKS_ALIAS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-jks-alias-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-jks-alias-password[`quarkus.tls."tls-bucket-name".key-store.jks.alias-password`]##

[.description]
--
Password of the alias in the key store. When not set, the password may be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_JKS_ALIAS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_JKS_ALIAS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-jks-provider]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-jks-provider[`quarkus.tls."tls-bucket-name".key-store.jks.provider`]##

[.description]
--
Provider of the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_JKS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_JKS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-sni]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-sni[`quarkus.tls."tls-bucket-name".key-store.sni`]##

[.description]
--
Enables Server Name Indication (SNI).

Server Name Indication (SNI) is a TLS extension that allows a client to specify the hostname it is attempting to connect to during the TLS handshake. This enables a server to present different SSL certificates for multiple domains on a single IP address, facilitating secure communication for virtual hosting scenarios.

With this setting enabled, the client indicate the server name during the TLS handshake, allowing the server to select the right certificate.

When configuring the keystore with PEM files, multiple CRT/Key must be given. When configuring the keystore with a JKS or a P12 file, it selects one alias based on the SNI hostname. In this case, all the keystore password and alias password must be the same (configured with the `password` and `alias-password` properties. Do not set the `alias` property.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_SNI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_SNI+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-credentials-provider-name]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-credentials-provider-name[`quarkus.tls."tls-bucket-name".key-store.credentials-provider.name`]##

[.description]
--
The name of the "credential" bucket (map key -> passwords) to retrieve from the `io.quarkus.credentials.CredentialsProvider`. If not set, the credential provider will not be used.

A credential provider offers a way to retrieve the key store password as well as alias password. Note that the credential provider is only used if the passwords are not set in the configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-credentials-provider-bean-name]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-credentials-provider-bean-name[`quarkus.tls."tls-bucket-name".key-store.credentials-provider.bean-name`]##

[.description]
--
The name of the bean providing the credential provider.

The name is used to select the credential provider to use. The credential provider must be exposed as a CDI bean and with the `@Named` annotation set to the configured name to be selected.

If not set, the default credential provider is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_CREDENTIALS_PROVIDER_BEAN_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_CREDENTIALS_PROVIDER_BEAN_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-credentials-provider-password-key]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-credentials-provider-password-key[`quarkus.tls."tls-bucket-name".key-store.credentials-provider.password-key`]##

[.description]
--
The key used to retrieve the key store password.

If the selected credential provider does not support the key, the password is not retrieved. Otherwise, the retrieved value is used to open the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_CREDENTIALS_PROVIDER_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_CREDENTIALS_PROVIDER_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`password`

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-credentials-provider-alias-password-key]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-key-store-credentials-provider-alias-password-key[`quarkus.tls."tls-bucket-name".key-store.credentials-provider.alias-password-key`]##

[.description]
--
The key used to retrieve the key store alias password.

If the selected credential provider does not contain the key, the alias password is not retrieved. Otherwise, the retrieved value is used to access the alias `private key` from the key store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_CREDENTIALS_PROVIDER_ALIAS_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__KEY_STORE_CREDENTIALS_PROVIDER_ALIAS_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`alias-password`

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-pem-certs]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-pem-certs[`quarkus.tls."tls-bucket-name".trust-store.pem.certs`]##

[.description]
--
List of the trusted cert paths (Pem format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--
|list of path
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-p12-path]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-p12-path[`quarkus.tls."tls-bucket-name".trust-store.p12.path`]##

[.description]
--
Path to the trust store file (P12 / PFX format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_P12_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_P12_PATH+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-p12-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-p12-password[`quarkus.tls."tls-bucket-name".trust-store.p12.password`]##

[.description]
--
Password of the trust store. If not set, the password must be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_P12_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_P12_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-p12-alias]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-p12-alias[`quarkus.tls."tls-bucket-name".trust-store.p12.alias`]##

[.description]
--
Alias of the trust store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_P12_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_P12_ALIAS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-p12-provider]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-p12-provider[`quarkus.tls."tls-bucket-name".trust-store.p12.provider`]##

[.description]
--
Provider of the trust store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_P12_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_P12_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-jks-path]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-jks-path[`quarkus.tls."tls-bucket-name".trust-store.jks.path`]##

[.description]
--
Path to the trust store file (JKS format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|path
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-jks-password]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-jks-password[`quarkus.tls."tls-bucket-name".trust-store.jks.password`]##

[.description]
--
Password of the trust store. If not set, the password must be retrieved from the credential provider.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-jks-alias]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-jks-alias[`quarkus.tls."tls-bucket-name".trust-store.jks.alias`]##

[.description]
--
Alias of the key in the trust store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_JKS_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_JKS_ALIAS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-jks-provider]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-jks-provider[`quarkus.tls."tls-bucket-name".trust-store.jks.provider`]##

[.description]
--
Provider of the trust store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_JKS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_JKS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-credentials-provider-name]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-credentials-provider-name[`quarkus.tls."tls-bucket-name".trust-store.credentials-provider.name`]##

[.description]
--
The name of the "credential" bucket (map key -> passwords) to retrieve from the `io.quarkus.credentials.CredentialsProvider`. If not set, the credential provider will not be used.

A credential provider offers a way to retrieve the key store password as well as alias password. Note that the credential provider is only used if the passwords are not set in the configuration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-credentials-provider-bean-name]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-credentials-provider-bean-name[`quarkus.tls."tls-bucket-name".trust-store.credentials-provider.bean-name`]##

[.description]
--
The name of the bean providing the credential provider.

The name is used to select the credential provider to use. The credential provider must be exposed as a CDI bean and with the `@Named` annotation set to the configured name to be selected.

If not set, the default credential provider is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_CREDENTIALS_PROVIDER_BEAN_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_CREDENTIALS_PROVIDER_BEAN_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-credentials-provider-password-key]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-store-credentials-provider-password-key[`quarkus.tls."tls-bucket-name".trust-store.credentials-provider.password-key`]##

[.description]
--
The key used to retrieve the trust store password.

If the selected credential provider does not contain the configured key, the password is not retrieved. Otherwise, the retrieved value is used to open the trust store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_CREDENTIALS_PROVIDER_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_STORE_CREDENTIALS_PROVIDER_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`password`

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-cipher-suites]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-cipher-suites[`quarkus.tls."tls-bucket-name".cipher-suites`]##

[.description]
--
Sets the ordered list of enabled cipher suites. If none is given, a reasonable default is selected from the built-in ciphers.

When suites are set, it takes precedence over the default suite defined by the `SSLEngineOptions` in use.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__CIPHER_SUITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__CIPHER_SUITES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-protocols]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-protocols[`quarkus.tls."tls-bucket-name".protocols`]##

[.description]
--
Sets the ordered list of enabled TLS protocols.

If not set, it defaults to `"TLSv1.3, TLSv1.2"`. The following list of protocols are supported: `TLSv1, TLSv1.1, TLSv1.2, TLSv1.3`. To only enable `TLSv1.3`, set the value to `to "TLSv1.3"`.

Note that setting an empty list, and enabling TLS is invalid. You must at least have one protocol.

Also, setting this replaces the default list of protocols.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`TLSv1.3,TLSv1.2`

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-handshake-timeout]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-handshake-timeout[`quarkus.tls."tls-bucket-name".handshake-timeout`]##

[.description]
--
The timeout for the TLS handshake phase.

If not set, it defaults to 10 seconds.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__HANDSHAKE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__HANDSHAKE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`10S`

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-alpn]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-alpn[`quarkus.tls."tls-bucket-name".alpn`]##

[.description]
--
Enables the Application-Layer Protocol Negotiation (ALPN).

Application-Layer Protocol Negotiation is a TLS extension that allows the client and server during the TLS handshake to negotiate which protocol they will use for communication. ALPN enables more efficient communication by allowing the client to indicate its preferred application protocol to the server before the TLS connection is established. This helps in scenarios such as HTTP/2 where multiple protocols may be available, allowing for faster protocol selection.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__ALPN+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-certificate-revocation-list]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-certificate-revocation-list[`quarkus.tls."tls-bucket-name".certificate-revocation-list`]##

[.description]
--
Sets the list of revoked certificates (paths to files).

A Certificate Revocation List (CRL) is a list of digital certificates that have been revoked by the issuing Certificate Authority (CA) before their scheduled expiration date. When a certificate is compromised, no longer needed, or deemed invalid for any reason, the CA adds it to the CRL to inform relying parties not to trust the certificate anymore.

Two formats are allowed: DER and PKCS++#++7 (also known as P7B). When using the DER format, you must pass DER-encoded CRLs. When using the PKCS++#++7 format, you must pass PKCS++#++7 `SignedData` object, with the only significant field being `crls`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__CERTIFICATE_REVOCATION_LIST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__CERTIFICATE_REVOCATION_LIST+++`
endif::add-copy-button-to-env-var[]
--
|list of path
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-all]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-trust-all[`quarkus.tls."tls-bucket-name".trust-all`]##

[.description]
--
If set to `true`, the server trusts all certificates.

This is useful for testing, but should not be used in production.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_ALL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__TRUST_ALL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-hostname-verification-algorithm]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-hostname-verification-algorithm[`quarkus.tls."tls-bucket-name".hostname-verification-algorithm`]##

[.description]
--
The hostname verification algorithm to use in case the server's identity should be checked. Should be `HTTPS` (default), `LDAPS` or `NONE`.

If set to `NONE`, it does not verify the hostname.

If not set, the configured extension decides the default algorithm to use. For example, for HTTP, it will be "HTTPS". For TCP, it can depend on the protocol. Nevertheless, it is recommended to set it to "HTTPS" or "LDAPS".


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__HOSTNAME_VERIFICATION_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__HOSTNAME_VERIFICATION_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-tls-registry_quarkus-tls-tls-bucket-name-reload-period]] [.property-path]##link:#quarkus-tls-registry_quarkus-tls-tls-bucket-name-reload-period[`quarkus.tls."tls-bucket-name".reload-period`]##

[.description]
--
When configured, the server will reload the certificates (from the file system for example) and fires a `CertificateUpdatedEvent` if the reload is successful

This property configures the period to reload the certificates. IF not set, the certificates won't be reloaded automatically. However, the application can still trigger the reload manually using the `io.quarkus.tls.TlsConfiguration++#++reload()` method, and then fire the `CertificateUpdatedEvent` manually.

The fired event is used to notify the application that the certificates have been updated, and thus proceed with the actual switch of certificates.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TLS__TLS_BUCKET_NAME__RELOAD_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TLS__TLS_BUCKET_NAME__RELOAD_PERIOD+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|

|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-tls-registry_quarkus-tls]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]

:!summaryTableId: